In gcc/: 2011-01-09 Nicola Pero <nicola.pero@meta-innovation.com>

In gcc/:
2011-01-09  Nicola Pero  <nicola.pero@meta-innovation.com>

	PR objc/47232
	* c-parser.c (c_parser_declaration_or_fndef): Improved
	error message.

In gcc/testsuite/:
2011-01-09  Nicola Pero  <nicola.pero@meta-innovation.com>

	PR objc/47232
	* objc.dg/attributes/invalid-attribute-1.m: New.
	* obj-c++.dg/attributes/invalid-attribute-1.mm: New.

From-SVN: r168619